MT/lab3/src/gen/PythonToCParser.java
// Generated from java-escape by ANTLR 4.11.1
package gen;

    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PythonToCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, WHILE=4, IF=5, ELIF=6, ELSE=7, COLON=8, PLUS=9, 
		MINUS=10, MUL=11, DIV=12, OR=13, AND=14, NOT=15, L_BRACKET=16, R_BRACKET=17, 
		EQ=18, LT=19, GT=20, INT=21, FLOAT=22, BOOL=23, TRUE=24, FALSE=25, INPUT=26, 
		PRINT=27, VAR=28, VAR_START_CHAR=29, INT_N=30, FLOAT_N=31, WS=32;
	public static final int
		RULE_program = 0, RULE_commands = 1, RULE_inner_commands = 2, RULE_tabulation = 3, 
		RULE_command = 4, RULE_while_rule = 5, RULE_if_rule = 6, RULE_else_rule = 7, 
		RULE_elif = 8, RULE_assignment = 9, RULE_print = 10, RULE_input = 11, 
		RULE_expr = 12, RULE_atom = 13, RULE_exprContinue = 14, RULE_binaryOp = 15, 
		RULE_unaryOp = 16, RULE_number = 17, RULE_variable = 18, RULE_bool = 19, 
		RULE_type = 20, RULE_spaces = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "commands", "inner_commands", "tabulation", "command", "while_rule", 
			"if_rule", "else_rule", "elif", "assignment", "print", "input", "expr", 
			"atom", "exprContinue", "binaryOp", "unaryOp", "number", "variable", 
			"bool", "type", "spaces"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'    '", "'!'", "' '", "'while'", "'if'", "'elif'", "'else'", 
			"':'", "'+'", "'-'", "'*'", "'/'", "'or'", "'and'", "'not'", "'('", "')'", 
			"'='", "'<'", "'>'", "'int'", "'float'", "'bool'", "'True'", "'False'", 
			"'input()'", "'print'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "WHILE", "IF", "ELIF", "ELSE", "COLON", "PLUS", 
			"MINUS", "MUL", "DIV", "OR", "AND", "NOT", "L_BRACKET", "R_BRACKET", 
			"EQ", "LT", "GT", "INT", "FLOAT", "BOOL", "TRUE", "FALSE", "INPUT", "PRINT", 
			"VAR", "VAR_START_CHAR", "INT_N", "FLOAT_N", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonToCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public StringBuilder cProgram;
		public CommandsContext commands;
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public SpacesContext spaces() {
			return getRuleContext(SpacesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PythonToCParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonToCVisitor ) return ((PythonToCVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);

		        Map<String, String> typeOfVars = new HashMap<>();
		        StringBuilder result = new StringBuilder();
		        ((ProgramContext)_localctx).cProgram =  result.append("\nint main() {\n");
		        String tabs = "\t";
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((ProgramContext)_localctx).commands = commands(typeOfVars, result, tabs);
			setState(45);
			spaces();
			setState(46);
			match(EOF);

			        result.append(((ProgramContext)_localctx).commands.toC);
			    
			}
			_ctx.stop = _input.LT(-1);

			        for (Map.Entry<String, String> varType : typeOfVars.entrySet()) {
			            result.insert(0, varType.getValue() + " " + varType.getKey() + ";\n");
			        }
			        result.insert(0, "#include <stdio.h>\n\n");
			        result.append("}");
			    
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandsContext extends ParserRuleContext {
		public Map<String, String> typeOfVars;
		public StringBuilder result;
		public String tabs;
		public String toC;
		public CommandContext command;
		public CommandsContext commands;
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public CommandsContext(ParserRuleContext parent, int invokingState, Map<String, String> typeOfVars, StringBuilder result, String tabs) {
			super(parent, invokingState);
			this.typeOfVars = typeOfVars;
			this.result = result;
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_commands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).enterCommands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).exitCommands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonToCVisitor ) return ((PythonToCVisitor<? extends T>)visitor).visitCommands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandsContext commands(Map<String, String> typeOfVars,StringBuilder result,String tabs) throws RecognitionException {
		CommandsContext _localctx = new CommandsContext(_ctx, getState(), typeOfVars, result, tabs);
		enterRule(_localctx, 2, RULE_commands);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHILE:
			case IF:
			case PRINT:
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				((CommandsContext)_localctx).command = command(typeOfVars, result, tabs);
				setState(50);
				((CommandsContext)_localctx).commands = commands(typeOfVars, result, tabs);

				        ((CommandsContext)_localctx).toC =  tabs + ((CommandsContext)_localctx).command.toC + "\n" + ((CommandsContext)_localctx).commands.toC;
				    
				}
				break;
			case EOF:
			case T__2:
				enterOuterAlt(_localctx, 2);
				{

				        ((CommandsContext)_localctx).toC =  "";
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Inner_commandsContext extends ParserRuleContext {
		public Map<String, String> typeOfVars;
		public StringBuilder result;
		public String tabs;
		public String toC;
		public TabulationContext tabulation;
		public CommandContext command;
		public Inner_commandsContext inner_commands;
		public TabulationContext tabulation() {
			return getRuleContext(TabulationContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public Inner_commandsContext inner_commands() {
			return getRuleContext(Inner_commandsContext.class,0);
		}
		public Inner_commandsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Inner_commandsContext(ParserRuleContext parent, int invokingState, Map<String, String> typeOfVars, StringBuilder result, String tabs) {
			super(parent, invokingState);
			this.typeOfVars = typeOfVars;
			this.result = result;
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_inner_commands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).enterInner_commands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).exitInner_commands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonToCVisitor ) return ((PythonToCVisitor<? extends T>)visitor).visitInner_commands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inner_commandsContext inner_commands(Map<String, String> typeOfVars,StringBuilder result,String tabs) throws RecognitionException {
		Inner_commandsContext _localctx = new Inner_commandsContext(_ctx, getState(), typeOfVars, result, tabs);
		enterRule(_localctx, 4, RULE_inner_commands);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				((Inner_commandsContext)_localctx).tabulation = tabulation();
				setState(57);
				((Inner_commandsContext)_localctx).command = command(typeOfVars, result, tabs);
				setState(58);
				((Inner_commandsContext)_localctx).inner_commands = inner_commands(typeOfVars, result, tabs);

				        ((Inner_commandsContext)_localctx).toC =  (((Inner_commandsContext)_localctx).tabulation!=null?_input.getText(((Inner_commandsContext)_localctx).tabulation.start,((Inner_commandsContext)_localctx).tabulation.stop):null) + tabs + ((Inner_commandsContext)_localctx).command.toC + "\n" + ((Inner_commandsContext)_localctx).inner_commands.toC;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{

				        ((Inner_commandsContext)_localctx).toC =  "";
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TabulationContext extends ParserRuleContext {
		public TabulationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tabulation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).enterTabulation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).exitTabulation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonToCVisitor ) return ((PythonToCVisitor<? extends T>)visitor).visitTabulation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TabulationContext tabulation() throws RecognitionException {
		TabulationContext _localctx = new TabulationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tabulation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				match(T__0);
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public Map<String, String> typeOfVars;
		public StringBuilder result;
		public String tabs;
		public String toC;
		public AssignmentContext assignment;
		public PrintContext print;
		public If_ruleContext if_rule;
		public While_ruleContext while_rule;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public If_ruleContext if_rule() {
			return getRuleContext(If_ruleContext.class,0);
		}
		public While_ruleContext while_rule() {
			return getRuleContext(While_ruleContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public CommandContext(ParserRuleContext parent, int invokingState, Map<String, String> typeOfVars, StringBuilder result, String tabs) {
			super(parent, invokingState);
			this.typeOfVars = typeOfVars;
			this.result = result;
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonToCVisitor ) return ((PythonToCVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command(Map<String, String> typeOfVars,StringBuilder result,String tabs) throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState(), typeOfVars, result, tabs);
		enterRule(_localctx, 8, RULE_command);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				((CommandContext)_localctx).assignment = assignment(typeOfVars, result, tabs);

				        ((CommandContext)_localctx).toC =  ((CommandContext)_localctx).assignment.toC;
				    
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				((CommandContext)_localctx).print = print(typeOfVars, result, tabs);

				        ((CommandContext)_localctx).toC =  ((CommandContext)_localctx).print.toC;
				    
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				((CommandContext)_localctx).if_rule = if_rule(typeOfVars, result, tabs);

				        ((CommandContext)_localctx).toC =  ((CommandContext)_localctx).if_rule.toC;
				    
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				((CommandContext)_localctx).while_rule = while_rule(typeOfVars, result, tabs);

				        ((CommandContext)_localctx).toC =  ((CommandContext)_localctx).while_rule.toC;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class While_ruleContext extends ParserRuleContext {
		public Map<String, String> typeOfVars;
		public StringBuilder result;
		public String tabs;
		public String toC;
		public ExprContext expr;
		public Inner_commandsContext inner_commands;
		public TerminalNode WHILE() { return getToken(PythonToCParser.WHILE, 0); }
		public List<SpacesContext> spaces() {
			return getRuleContexts(SpacesContext.class);
		}
		public SpacesContext spaces(int i) {
			return getRuleContext(SpacesContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PythonToCParser.COLON, 0); }
		public Inner_commandsContext inner_commands() {
			return getRuleContext(Inner_commandsContext.class,0);
		}
		public While_ruleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public While_ruleContext(ParserRuleContext parent, int invokingState, Map<String, String> typeOfVars, StringBuilder result, String tabs) {
			super(parent, invokingState);
			this.typeOfVars = typeOfVars;
			this.result = result;
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_while_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).enterWhile_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).exitWhile_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonToCVisitor ) return ((PythonToCVisitor<? extends T>)visitor).visitWhile_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_ruleContext while_rule(Map<String, String> typeOfVars,StringBuilder result,String tabs) throws RecognitionException {
		While_ruleContext _localctx = new While_ruleContext(_ctx, getState(), typeOfVars, result, tabs);
		enterRule(_localctx, 10, RULE_while_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(WHILE);
			setState(84);
			spaces();
			setState(85);
			((While_ruleContext)_localctx).expr = expr(typeOfVars);
			setState(86);
			spaces();
			setState(87);
			match(COLON);
			setState(88);
			((While_ruleContext)_localctx).inner_commands = inner_commands(typeOfVars, result, tabs);

			        ((While_ruleContext)_localctx).toC =  "while (" + ((While_ruleContext)_localctx).expr.toC + ") {\n" + ((While_ruleContext)_localctx).inner_commands.toC + tabs + "}";
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_ruleContext extends ParserRuleContext {
		public Map<String, String> typeOfVars;
		public StringBuilder result;
		public String tabs;
		public String toC;
		public ExprContext expr;
		public Inner_commandsContext inner_commands;
		public ElifContext elif;
		public Else_ruleContext else_rule;
		public TerminalNode IF() { return getToken(PythonToCParser.IF, 0); }
		public List<SpacesContext> spaces() {
			return getRuleContexts(SpacesContext.class);
		}
		public SpacesContext spaces(int i) {
			return getRuleContext(SpacesContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PythonToCParser.COLON, 0); }
		public Inner_commandsContext inner_commands() {
			return getRuleContext(Inner_commandsContext.class,0);
		}
		public ElifContext elif() {
			return getRuleContext(ElifContext.class,0);
		}
		public Else_ruleContext else_rule() {
			return getRuleContext(Else_ruleContext.class,0);
		}
		public If_ruleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public If_ruleContext(ParserRuleContext parent, int invokingState, Map<String, String> typeOfVars, StringBuilder result, String tabs) {
			super(parent, invokingState);
			this.typeOfVars = typeOfVars;
			this.result = result;
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_if_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).enterIf_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonToCListener ) ((PythonToCListener)listener).exitIf_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonToCVisitor ) return ((PythonToCVisitor<? extends T>)visitor).visitIf_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_ruleContext if_rule(Map<String, String> typeOfVars,StringBuilder result,String tabs) throws RecognitionException {
		If_ruleContext _localctx = new If_ruleContext(_ctx, getState(), typeOfVars, result, tabs);
		enterRule(_localctx, 12, RULE_if_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(IF);
			setState(92);
			spaces();
			setState(93);
			((If_ruleContext)_localctx).expr = expr(typeOfVars);
			setState(94);
			spaces();
			setState(95);
			match(COLON);
			setState(96);
			((If_ruleContext)_localctx).inner_commands = inner_commands(typeOfVars, result, tabs);
			setState(97);
			((If_ruleContext)_localctx).elif = elif(typeOfVars, result, tabs);
			setState(98);
			((If_ruleContext)_localctx).else_rule = else_rule(typeOfVars, result, tabs);

			        ((If_ruleContext)_localctx).toC =  "if (" + ((If_ruleContext)_localctx).expr.toC + ") {\n" + ((If_ruleContext)_localctx).inner_commands.toC + tabs + "} " + ((If_ruleContext)_localctx).elif.toC + ((If_ruleContext)_localctx).else_rule.toC;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Else_ruleContext extends ParserRuleContext {
		public Map<String, String> typeOfVars;
		public StringBuilder result;
		public String tabs;
		public String toC;
		public Inner_commandsContext inner_commands;
		public TerminalNode ELSE() { return getToken(PythonToCParser.ELSE, 0); }
		public List<SpacesContext> spaces() {
			return getRuleContexts(SpacesContext.class);
		}
		public SpacesContext spaces(int i) {
			return getRuleContext(SpacesContext.class,i);
		}
		public TerminalNode COLON() { return getToken(PythonToCParser.COLON, 0); }
		public Inner_commandsContext inner_commands() {
